# gradiend

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  PYPI.md  README.md  ReadMeAnonymous.md  check_dependencies.py  demo.ipynb  environment-dev.yml  environment.yml  environment_no_build.yml  environment_no_builds.yml  mkdocs.yml  pruning_analysis_results.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_training_test.sh  setup_minimal_env.sh  test_failures.txt  test_imports_minimal.py
docs/: api-reference.md  citation.md  examples.md  faq.md  index.md  installation.md  publishing-docs.md  requirements.txt  start.md
experiments/: README.md  gender_de_pre_prune_topk_ablation.py  gender_de_pruning_analysis.py  gender_de_pruning_parameter_ablation.py  multilingual_gradiend_demo.py  multilingual_gradiend_demo_small.py  paper_workflow.py  paper_workflow_enxtended.py  pre_prune_mask_recall.py  race_llama32_benchmark.py
gradiend/: __init__.py  model.py  util.py
gradiend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_docs.py  fix_docstring_markdown_lists.py  link_api_symbols.py  prefetch_hf_datasets.py  probe_decoder_only_cloze.py  requirements-prefetch-datasets.txt  run_multilingual_demo_v010.sh  train_frozen_mlm_head.py
test_bench/: Dockerfile  Dockerfile.unit-tests  README.md  TEST_BENCH_IMPLEMENTATION.md  __init__.py  run_all.py  run_bench.py  run_test_bench.sh
tests/: README.md  TEST_PLANNING_SUMMARY.md  __init__.py  check_test_imports.py  conftest.py  find_heavy_tests.py  install_deps.sh  run_and_report.py  run_tests.py  run_tests_conda.sh  run_tests_wsl.sh  run_tests_wsl_gradiend_test.sh  setup_conda_test_env.sh  setup_test_env.sh  test_anchor_aligned_encoding.py  test_annotate_data.py  test_backbone_params.py  test_callbacks.py  test_clm_perplexity_overflow.py  test_comparison_heatmap_normalized_bounds.py  test_comparison_matrix.py  test_cross_encoding_metrics.py  test_data_generation.py  test_data_loading.py  test_data_module.py  test_datasets_common.py  test_datasets_text.py  test_decoder_eval_utils.py  test_decoder_feature_factor_source.py  test_decoder_mlm_head_dataset.py  test_decoder_mlm_head_neutral_encoder.py  test_decoder_only_mlm.py  test_decoder_plotting.py  test_deprecation.py  (+90 more)
(+332 files in other folders)
