[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradiend"
version = "0.1.0"
description = "GRADIEND: Gradient-based Targeted Feature Learning within Neural Networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "See LICENSE file"}
authors = [
    {name = "Jonathan Drechsel", email = "jonathan.drechsel@uni-passau.de"}
]
keywords = ["machine learning", "neural networks", "feature learning", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0,<5.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
recommended = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "safetensors>=0.3.0",
    "datasets>=3.0.2,<=3.6.0",
    "pyarrow>=14.0.0",
    "sentencepiece>=0.1.99",
    "inflect>=5.0.0",
    "tabulate>=0.9.0",
]
data = [
    "spacy>=3.5.0",
]
dev = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/aieng-lab/gradiend"
Documentation = "https://aieng-lab.github.io/gradiend/"
Repository = "https://github.com/aieng-lab/gradiend"
"Bug Tracker" = "https://github.com/aieng-lab/gradiend/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (run actual training)",
]

[tool.coverage.run]
source = ["gradiend"]
omit = ["*/tests/*", "*/examples/*", "*/experiments/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.setuptools]
packages = ["gradiend"]

[tool.setuptools.package-data]
gradiend = ["py.typed"]
